unpackaged/main/default/objects/Account/fields/Alpha1__c.field-meta.xml
<CustomField>
    <fullName>Alpha1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alpha1</label>
    <type>Checkbox</type>
</CustomField>