unpackaged/main/default/objects/Account/fields/Alpha__c.field-meta.xml
<CustomField>
    <fullName>Alpha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alpha</label>
    <type>Checkbox</type>
</CustomField>