unpackaged/main/default/objects/Account/fields/beta1__c.field-meta.xml
<CustomField>
    <fullName>beta1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>beta1</label>
    <type>Checkbox</type>
</CustomField>