unpackaged/main/default/objects/Account/fields/beta__c.field-meta.xml
<CustomField>
    <fullName>beta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>beta</label>
    <type>Checkbox</type>
</CustomField>