unpackaged/main/default/objects/Account/fields/Branch2__c.field-meta.xml
<CustomField>
    <fullName>Branch2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch2</label>
    <type>Checkbox</type>
</CustomField>