unpackaged/main/default/objects/Account/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>branch</label>
    <type>Checkbox</type>
</CustomField>