unpackaged/main/default/objects/Account/fields/change10__c.field-meta.xml
<CustomField>
    <fullName>change10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>change10</label>
    <type>Checkbox</type>
</CustomField>