unpackaged/main/default/objects/Account/fields/change5__c.field-meta.xml
<CustomField>
    <fullName>change5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>change5</label>
    <type>Checkbox</type>
</CustomField>