unpackaged/main/default/objects/Account/fields/Checkboxdemo1__c.field-meta.xml
<CustomField>
    <fullName>Checkboxdemo1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkboxdemo1</label>
    <type>Checkbox</type>
</CustomField>