unpackaged/main/default/objects/Account/fields/Checkboxdemo__c.field-meta.xml
<CustomField>
    <fullName>Checkboxdemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkboxdemo</label>
    <type>Checkbox</type>
</CustomField>