unpackaged/main/default/objects/Account/fields/Demo1__c.field-meta.xml
<CustomField>
    <fullName>Demo1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo1</label>
    <type>Checkbox</type>
</CustomField>