unpackaged/main/default/objects/Account/fields/Demo2__c.field-meta.xml
<CustomField>
    <fullName>Demo2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo2</label>
    <type>Checkbox</type>
</CustomField>