unpackaged/main/default/objects/Account/fields/Demo3__c.field-meta.xml
<CustomField>
    <fullName>Demo3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo3</label>
    <type>Checkbox</type>
</CustomField>