unpackaged/main/default/objects/Account/fields/Omega__c.field-meta.xml
<CustomField>
    <fullName>Omega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omega</label>
    <type>Checkbox</type>
</CustomField>